--- a/config/locales/arb/models.yml
+++ b/config/locales/arb/models.yml
@@ -1521,7 +1521,7 @@ arb:
     # managed_transports: "Transports gérés"
     # managed_unpaid_sales: "Ventes impayées gérées"
     mandates: "تفويضات"
-    # marker_data: "Marker data"
+    # markers: "Repères"
     master: "كتلة رئيسية" #?
     max_reduction_rate: "سعر التخفيض" #?
     # maximal_grantable_reduction_percentage: "Pourcentage maximal autorisé à etre effectué"
