--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -827,7 +827,7 @@ jpn:
     # managed_transports: "Transports gérés"
     # managed_unpaid_sales: "Ventes impayées gérées"
     # mandates: "Responsabilités"
-    # marker_data: "Marker data"
+    # markers: "Repères"
     # maximal_grantable_reduction_percentage: "Pourcentage maximal autorisé à etre effectué"
     # maximal_length: "Longueur maximale"
     # maximal_quantity: "Maximal quantity"
