--- a/config/locales/fra/prints/manure_management_plan.xml
+++ b/config/locales/fra/prints/manure_management_plan.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="land_parcel_fertilization_list" language="groovy" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="786" leftMargin="28" rightMargin="28" topMargin="28" bottomMargin="28" isTitleNewPage="true" whenResourceMissingType="Empty" uuid="9c1f11b7-03dd-4803-9e1b-41b87b9d23c0">
 	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="384"/>
+	<property name="ireport.x" value="130"/>
+	<property name="ireport.y" value="413"/>
 	<template><![CDATA["/home/djoulin/ekylibre/config/corporate-identity/reports-style.jrtx"]]></template>
 	<style name="Title" fontName="DejaVu Sans" fontSize="30" isBold="true" pdfFontName="Times-Bold"/>
 	<style name="SubTitle" forecolor="#736343" fontName="Arial" fontSize="18"/>
@@ -111,10 +111,16 @@
 		<field name="input_nitrogen_concentration_in_unity" class="java.lang.Double">
 			<fieldDescription><![CDATA[nitrogen-concentration-in-unity]]></fieldDescription>
 		</field>
-		<field name="input_phosphorus_concentration" class="java.lang.Double">
+		<field name="input_phosphorus_concentration" class="java.lang.String">
+			<fieldDescription><![CDATA[phosphorus-concentration]]></fieldDescription>
+		</field>
+		<field name="input_phosphorus_concentration_in_unity" class="java.lang.Double">
 			<fieldDescription><![CDATA[phosphorus-concentration-in-unity]]></fieldDescription>
 		</field>
-		<field name="input_potassium_concentration" class="java.lang.Double">
+		<field name="input_potassium_concentration" class="java.lang.String">
+			<fieldDescription><![CDATA[potassium-concentration]]></fieldDescription>
+		</field>
+		<field name="input_potassium_concentration_in_unity" class="java.lang.Double">
 			<fieldDescription><![CDATA[potassium-concentration-in-unity]]></fieldDescription>
 		</field>
 		<field name="input_variant_unit" class="java.lang.String">
@@ -131,7 +137,7 @@
 			<variableExpression><![CDATA[$F{input_quantity_in_kilogram}.doubleValue()]]></variableExpression>
 		</variable>
 		<variable name="total_prev_phosphorus_quantity" class="java.lang.Double" calculation="Sum">
-			<variableExpression><![CDATA[$F{input_quantity_in_kilogram}.doubleValue()*$F{input_phosphorus_concentration}]]></variableExpression>
+			<variableExpression><![CDATA[$F{input_quantity_in_kilogram}.doubleValue()*$F{input_phosphorus_concentration_in_unity}.doubleValue()]]></variableExpression>
 		</variable>
 		<variable name="total_prev_nitrogen_quantity_per_area" class="java.lang.Double">
 			<variableExpression><![CDATA[$V{total_prev_nitrogen_quantity}/$P{cultivable_land_parcel_area}.doubleValue()]]></variableExpression>
@@ -140,7 +146,7 @@
 			<variableExpression><![CDATA[$V{total_prev_phosphorus_quantity}/$P{cultivable_land_parcel_area}.doubleValue()]]></variableExpression>
 		</variable>
 		<variable name="total_prev_potassium_quantity" class="java.lang.Double" calculation="Sum">
-			<variableExpression><![CDATA[$F{input_quantity_in_kilogram}.doubleValue()*$F{input_potassium_concentration}]]></variableExpression>
+			<variableExpression><![CDATA[$F{input_quantity_in_kilogram}.doubleValue()*$F{input_potassium_concentration_in_unity}.doubleValue()]]></variableExpression>
 		</variable>
 		<variable name="total_prev_potassium_quantity_per_area" class="java.lang.Double">
 			<variableExpression><![CDATA[$V{total_prev_potassium_quantity}/($P{cultivable_land_parcel_area}.doubleValue())]]></variableExpression>
@@ -161,7 +167,7 @@
 		<fieldDescription><![CDATA[ancestor::campaigns/@entity-name]]></fieldDescription>
 	</field>
 	<field name="area" class="java.lang.String">
-		<fieldDescription><![CDATA[@area-in-hectare]]></fieldDescription>
+		<fieldDescription><![CDATA[@area]]></fieldDescription>
 	</field>
 	<field name="name" class="java.lang.String">
 		<fieldDescription><![CDATA[@name]]></fieldDescription>
@@ -201,8 +207,8 @@
 	<group name="land_parcel_group" isStartNewPage="true" keepTogether="true">
 		<groupExpression><![CDATA[$F{id}]]></groupExpression>
 		<groupHeader>
-			<band height="125">
-				<textField>
+			<band height="161">
+				<textField isStretchWithOverflow="true">
 					<reportElement uuid="767321ef-0cb0-45b7-9d28-e511bc11c4d2" style="sub-title" x="2" y="0" width="784" height="24"/>
 					<textElement textAlignment="Justified" verticalAlignment="Middle"/>
 					<textFieldExpression><![CDATA["Parcelle culturale  "+$F{work_number}+" - "+$F{name}]]></textFieldExpression>
@@ -215,49 +221,55 @@
 					<text><![CDATA[]]></text>
 				</staticText>
 				<staticText>
-					<reportElement uuid="f13d06af-132b-4d03-b61b-84650403995b" style="label" x="2" y="37" width="69" height="22"/>
+					<reportElement uuid="f13d06af-132b-4d03-b61b-84650403995b" style="label" x="10" y="49" width="69" height="22"/>
 					<textElement verticalAlignment="Middle">
 						<font fontName="Open Sans" size="10"/>
 					</textElement>
 					<text><![CDATA[Surface]]></text>
 				</staticText>
 				<staticText>
-					<reportElement uuid="d1b6c43b-248a-475e-9f13-df52ab37325f" style="label" x="2" y="59" width="69" height="22"/>
+					<reportElement uuid="d1b6c43b-248a-475e-9f13-df52ab37325f" style="label" x="10" y="71" width="69" height="22"/>
 					<textElement verticalAlignment="Middle">
 						<font fontName="Open Sans" size="10"/>
 					</textElement>
 					<text><![CDATA[Culture]]></text>
 				</staticText>
 				<staticText>
-					<reportElement uuid="0f22a24e-779f-4c89-b703-44e223e147c5" style="label" x="2" y="81" width="69" height="37"/>
+					<reportElement uuid="0f22a24e-779f-4c89-b703-44e223e147c5" style="label" x="10" y="93" width="69" height="37"/>
 					<textElement verticalAlignment="Middle">
 						<font fontName="Open Sans" size="10"/>
 					</textElement>
 					<text><![CDATA[Précédent cultural]]></text>
 				</staticText>
 				<textField evaluationTime="Group" evaluationGroup="land_parcel_group" isBlankWhenNull="true">
-					<reportElement uuid="7ffc3808-a292-4169-9bac-7bf545fc238e" style="base" x="71" y="59" width="170" height="22"/>
+					<reportElement uuid="7ffc3808-a292-4169-9bac-7bf545fc238e" style="base" x="79" y="71" width="170" height="22"/>
 					<textElement verticalAlignment="Middle"/>
 					<textFieldExpression><![CDATA[$F{production_name}]]></textFieldExpression>
 				</textField>
 				<staticText>
-					<reportElement uuid="36931cf2-a5e2-44f0-acf1-45084b45ad25" style="label" x="316" y="37" width="69" height="44"/>
+					<reportElement uuid="36931cf2-a5e2-44f0-acf1-45084b45ad25" style="label" x="289" y="71" width="69" height="44"/>
 					<textElement verticalAlignment="Middle">
 						<font fontName="Open Sans" size="10"/>
 					</textElement>
 					<text><![CDATA[Rendement prévu / réalisé]]></text>
 				</staticText>
-				<textField pattern="###0.00 ha" isBlankWhenNull="true">
-					<reportElement uuid="b3834841-2c13-4098-90f2-dd5003f7e126" style="base" x="71" y="37" width="170" height="22"/>
+				<textField pattern="###0.00 Ha" isBlankWhenNull="true">
+					<reportElement uuid="b3834841-2c13-4098-90f2-dd5003f7e126" style="base" x="79" y="49" width="170" height="22"/>
 					<textElement verticalAlignment="Middle"/>
-					<textFieldExpression><![CDATA[$F{area}]]></textFieldExpression>
+					<textFieldExpression><![CDATA[$F{area_value}]]></textFieldExpression>
 				</textField>
 				<image onErrorType="Blank" evaluationTime="Group" evaluationGroup="land_parcel_group">
-					<reportElement uuid="76a9af81-d2a1-4946-8f26-98bfb1e1fb3a" x="632" y="37" width="144" height="81">
+					<reportElement uuid="76a9af81-d2a1-4946-8f26-98bfb1e1fb3a" x="632" y="48" width="144" height="81">
 						<printWhenExpression><![CDATA[!$F{svg_path}.isEmpty()]]></printWhenExpression>
 					</reportElement>
 					<imageExpression><![CDATA[net.sf.jasperreports.renderers.BatikRenderer.getInstanceFromText($F{svg_path})]]></imageExpression>
 				</image>
+				<rectangle radius="10">
+					<reportElement uuid="bd5f3d5d-eda9-40e0-ac15-a97942d216e8" style="title" x="2" y="49" width="247" height="81"/>
+				</rectangle>
+				<rectangle radius="10">
+					<reportElement uuid="dee27788-3e3b-4e29-9f33-264c5be10dc5" style="title" x="277" y="49" width="247" height="81"/>
+				</rectangle>
 			</band>
 		</groupHeader>
 	</group>
@@ -652,7 +664,7 @@
 								</staticText>
 							</jr:columnHeader>
 							<jr:detailCell height="20" rowSpan="1">
-								<textField pattern="###0.00;-###0.00" isBlankWhenNull="true">
+								<textField pattern="###0.00" isBlankWhenNull="true">
 									<reportElement uuid="782658be-d7dc-4787-9233-1f467fae329e" style="table-td" x="0" y="0" width="39" height="20"/>
 									<textElement textAlignment="Center" verticalAlignment="Middle"/>
 									<textFieldExpression><![CDATA[$F{input_phosphorus_concentration}]]></textFieldExpression>
@@ -755,7 +767,7 @@
 								<textField pattern="###0.00" isBlankWhenNull="true">
 									<reportElement uuid="83757847-62e7-4f4a-ba30-11b58658b2d2" style="table-td" x="0" y="0" width="70" height="20"/>
 									<textElement textAlignment="Center" verticalAlignment="Middle"/>
-									<textFieldExpression><![CDATA[$F{input_quantity_in_kilogram}.doubleValue()*$F{input_phosphorus_concentration}]]></textFieldExpression>
+									<textFieldExpression><![CDATA[$F{input_quantity_in_kilogram}.doubleValue()*$F{input_phosphorus_concentration_in_unity}.doubleValue()]]></textFieldExpression>
 								</textField>
 							</jr:detailCell>
 						</jr:column>
@@ -785,7 +797,7 @@
 								<textField pattern="###0.00" isBlankWhenNull="true">
 									<reportElement uuid="f33eb29d-9c8e-42ff-9d2e-90a1dc4af82d" style="table-td" x="0" y="0" width="70" height="20"/>
 									<textElement textAlignment="Center" verticalAlignment="Middle"/>
-									<textFieldExpression><![CDATA[$F{input_quantity_in_kilogram}.doubleValue()*$F{input_potassium_concentration}]]></textFieldExpression>
+									<textFieldExpression><![CDATA[$F{input_quantity_in_kilogram}.doubleValue()*$F{input_potassium_concentration_in_unity}.doubleValue()]]></textFieldExpression>
 								</textField>
 							</jr:detailCell>
 						</jr:column>
