--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -581,8 +581,16 @@ arb:
       index: "ادارة الانتاج" #?
       unvalidated_operations: "تحقيق الاعمال" #?
     backend/production_support_marker_indicator_data: #?
-    backend/production_support_markers: #?
-    backend/production_supports: #?
+    backend/production_support_markers:
+      # edit: "Modifier un objectif"
+      # index: "Objectifs"
+      # new: "Nouvel objectif"
+      # show: "Objectif\_: %{id}"
+    backend/production_supports:
+      # edit: "Modifier un support de production"
+      # index: "Supports de production"
+      # new: "Nouveau support de production"
+      # show: "Support de production\_: %{id}"
     backend/productions:
       # edit: "Modifier la production\_: %{name}"
       # index: "Productions"
@@ -920,6 +928,7 @@ arb:
     # add_indicator_datum: "Ajouter une mesure pour un indicateur"
     # add_item: "Ajouter un élément"
     # add_mail: "Ajouter une adresse postale"
+    # add_marker: "Ajouter un objectif"
     # add_mobile: "Ajouter un n° de portable"
     # add_new_record: "Ajouter un nouveau enregistrement"
     # add_passage: "Ajouter un produit"
@@ -1073,6 +1082,7 @@ arb:
     consult: "استشارة"
     contact: "العنوان"
     contact_create: "اضافة مشترك جديد" #?
+    # contained_products: "Produits contenus"
     # contains: "Contient"
     # content_products: "Produits contenus"
     # contextual_help: "Aide contextuelle"
@@ -1378,6 +1388,7 @@ arb:
     # mandates_new_fields: "Vous devez saisir au moins une valeur dans l’un des champs de modification"
     manual_period: "من %{start} الى %{finish}"
     # map: "Carte"
+    # markers: "Objectifs"
     # measure_options: "Indicateur de type mesure"
     # meat_withdrawal_period: "Période d'attente avant remise en vente de viande"
     # medical_informations: "Informations médicales"
