--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -508,15 +508,15 @@ fra:
       # index: "Index backend/product process"
       # new: "New backend/product process"
     backend/production_support_markers:
-      # edit: "Edit backend/production support marker"
-      # index: "Index backend/production support marker"
-      # new: "New backend/production support marker"
-      # show: "Show backend/production support marker"
+      edit: "Modifier un objectif"
+      index: "Objectifs"
+      new: "Nouvel objectif"
+      show: "Objectif\_: %{id}"
     backend/production_supports:
-      # edit: "Edit backend/production support"
-      # index: "Index backend/production support"
-      # new: "New backend/production support"
-      # show: "Show backend/production support"
+      edit: "Modifier un support de production"
+      index: "Supports de production"
+      new: "Nouveau support de production"
+      show: "Support de production\_: %{id}"
     backend/productions:
       edit: "Modifier la production\_: %{name}"
       index: "Productions"
@@ -877,6 +877,7 @@ fra:
     add_indicator_datum: "Ajouter une mesure pour un indicateur"
     add_item: "Ajouter un élément"
     add_mail: "Ajouter une adresse postale"
+    add_marker: "Ajouter un objectif"
     add_mobile: "Ajouter un n° de portable"
     add_new_record: "Ajouter un nouveau enregistrement"
     add_passage: "Ajouter un produit"
@@ -1020,6 +1021,7 @@ fra:
     connect: "Entrer"
     consult: "Consulter"
     contact: "à l’adresse"
+    contained_products: "Produits contenus"
     contains: "Contient"
     content_products: "Produits contenus"
     contextual_help: "Aide contextuelle"
@@ -1275,6 +1277,7 @@ fra:
     mandates_new_fields: "Vous devez saisir au moins une valeur dans l’un des champs de modification"
     manual_period: "du %{start} au %{finish}"
     map: "Carte"
+    markers: "Objectifs"
     measure_options: "Indicateur de type mesure"
     meat_withdrawal_period: "Période d'attente avant remise en vente de viande"
     medical_informations: "Informations médicales"
