--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -823,8 +823,8 @@ fra:
     managed_transports: "Transports gérés" #?
     managed_unpaid_sales: "Ventes impayées gérées" #?
     mandates: "Responsabilités"
-    marker_data: "Marker data"
-    # markers: "Markers"
+    marker_data: "Marker data" #?
+    markers: "Markers"
     maximal_grantable_reduction_percentage: "Pourcentage maximal autorisé à etre effectué"
     maximal_length: "Longueur maximale"
     maximal_quantity: "Maximal quantity" #?
