--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -581,11 +581,7 @@ arb:
       index: "ادارة الانتاج" #?
       unvalidated_operations: "تحقيق الاعمال" #?
     backend/production_support_marker_indicator_data: #?
-    backend/production_support_markers:
-      # edit: "Modifier un objectif"
-      # index: "Objectifs"
-      # new: "Nouvel objectif"
-      # show: "Objectif\_: %{id}"
+    backend/production_support_markers: #?
     backend/production_supports:
       # edit: "Modifier un support de production"
       # index: "Supports de production"
