--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -510,11 +510,7 @@ eng:
       index: "Transfers and loss" #?
       new: "Add a new stock transfer or loss" #?
     backend/production_support_marker_indicator_data: #?
-    backend/production_support_markers:
-      # edit: "Modifier un objectif"
-      # index: "Objectifs"
-      # new: "Nouvel objectif"
-      # show: "Objectif\_: %{id}"
+    backend/production_support_markers: #?
     backend/production_supports:
       # edit: "Modifier un support de production"
       # index: "Supports de production"
