update labels (of chart)

--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -1453,7 +1453,7 @@ fra:
         fuel: "Carburant"
         fungicide: "Fongicide"
         gas: "Gaz"
-        grain: "Graine"
+        grain: "Céréale"
         grass: "Herbe"
         hay_rake: "Andaineur"
         herbicide: "Herbicide"
