--- a/config/locales/jpn/nomenclatures.yml
+++ b/config/locales/jpn/nomenclatures.yml
@@ -1553,7 +1553,7 @@ jpn:
         # fuel: "Carburant"
         # fungicide: "Fongicide"
         # gas: "Gaz"
-        # grain: "Graine"
+        # grain: "Céréale"
         # grass: "Herbe"
         # hay_rake: "Andaineur"
         # herbicide: "Herbicide"
