--- a/config/locales/spa/nomenclatures.yml
+++ b/config/locales/spa/nomenclatures.yml
@@ -1548,7 +1548,7 @@ spa:
         # fuel: "Carburant"
         # fungicide: "Fongicide"
         # gas: "Gaz"
-        # grain: "Graine"
+        # grain: "Céréale"
         # grass: "Herbe"
         # hay_rake: "Andaineur"
         # herbicide: "Herbicide"
