--- a/config/locales/fra/complement.yml
+++ b/config/locales/fra/complement.yml
@@ -2561,7 +2561,7 @@ fra:
         fuel: "Carburant"
         fungicide: "Fongicide"
         gas: "Gaz"
-        grain: "Graine"
+        grain: "Céréale"
         grass: "Herbe"
         hay_rake: "Andaineur"
         herbicide: "Herbicide"
